finish  routes swagger
